--- a/mail/themes/xplatform/messenger/messageWindow.css
+++ b/mail/themes/xplatform/messenger/messageWindow.css
@@ -51,9 +51,18 @@
   background-color: -moz-dialog;
 }
 
+%ifdef MOZ_CALENDAR
+#mail-toolbar-menubar2 {
+  -moz-box-ordinal-group: 0;
+}
+%endif
+
 #mail-toolbox {
   -moz-appearance: none;
   background-color: -moz-dialog;
+%ifndef MOZ_CALENDAR
+  border-bottom: 1px solid threedshadow;
+%endif
 }
 
 /* ::::: message header borders ::::: */
