--- a/mail/themes/classic/messenger/primaryToolbar.css
+++ b/mail/themes/classic/messenger/primaryToolbar.css
@@ -18,9 +18,13 @@
 }
 
 #tabs-toolbar {
+%ifdef MOZ_CALENDAR
   border-bottom: 1px solid rgba(10, 31, 51, .35);
-%ifndef MOZ_CALENDAR
-  padding-bottom: 2px;
+  padding-bottom: 1px;
+%else
+%ifdef XP_WIN
+  -moz-appearance: -moz-win-browsertabbar-toolbox;
+%endif 
 %endif
 }
 
@@ -42,15 +46,17 @@
   margin: 0 0 0px;
 }
 
+%ifdef MOZ_CALENDAR
 .mail-toolbox {
-  -moz-appearance: none;
-  background: transparent;
+  border-bottom: 1px solid threedshadow;
 }
 
-%ifdef MOZ_CALENDAR
-.mail-toolbox:not([messagewindow="true"]) {
-  border-top: 0px;
-  border-bottom: 1px solid threedshadow;
+.mail-toolbox:not([isNotMainWindow="true"]),
+.contentTabToolbox {
+  -moz-appearance: none;
+  border-top: none;
+  background-image: -moz-linear-gradient(rgba(255, 255, 255, .5),
+                    rgba(255, 255, 255, .1) 19px) !important;
 }
 %endif
 
