--- a/mail/themes/classic/messenger/tabmail.css
+++ b/mail/themes/classic/messenger/tabmail.css
@@ -60,11 +60,21 @@
 
 .tabmail-tab {
   -moz-appearance: none;
-  background: -moz-linear-gradient(bottom, rgba(10%, 10%, 10%, .4) 1px,
-              transparent 1px), -moz-linear-gradient(transparent,
-              hsla(0, 0%, 45%, .1) 1px, hsla(0, 0%, 32%, .2) 80%,
-              hsla(0, 0%, 0%, .2)),
-              -moz-linear-gradient(-moz-dialog, -moz-dialog);
+  background:
+    -moz-linear-gradient(
+      bottom,
+      rgba(10%, 10%, 10%, .4) 1px,
+      transparent 1px
+    ),
+    -moz-linear-gradient(
+      transparent,
+      hsla(0, 0%, 32%, .2) 80%,
+      hsla(0, 0%, 0%, .2)
+    ),
+    -moz-linear-gradient(
+      -moz-dialog,
+      -moz-dialog
+    );
   background-origin: border-box;
   background-position: 1px 2px;
   background-size: -moz-calc(100% - 2px) -moz-calc(100% - 2px);
@@ -72,22 +82,43 @@
   margin: 0;
   padding: 1px 0 3px;
   -moz-border-image: url(icons/tab.png) 4 3 0 / 4px 3px 0 repeat stretch;
-  height: 26px;
+  height: 24px;
+  min-height: 24px;
   border-radius: 0;
   border-width: 0;
+  margin-top: 1px;
+%ifndef MOZ_CALENDAR
+  margin-bottom: 4px;
+%endif
 }
 
 .tabmail-tab:not(:-moz-lwtheme):not([selected="true"]):hover {
-  background-image: -moz-linear-gradient(bottom, rgba(10%, 10%, 10%, .4) 1px,
-                    transparent 1px), -moz-linear-gradient(hsla(0, 0%, 100%, .3) 1px,
-                    hsla(0, 0%, 75%, .2) 80%, hsla(0, 0%, 60%, .2)),
-                    -moz-linear-gradient(-moz-dialog, -moz-dialog);
+  background-image:
+    -moz-linear-gradient(
+      bottom,
+      rgba(10%, 10%, 10%, .4) 1px,
+      transparent 1px
+    ),
+    -moz-linear-gradient(
+      hsla(0, 0%, 100%, .3) 1px,
+      hsla(0, 0%, 75%, .2) 80%,
+      hsla(0, 0%, 60%, .2)
+    ),
+    -moz-linear-gradient(
+      -moz-dialog,
+      -moz-dialog
+    );
 }
 
 .tabmail-tab[selected="true"]:not(:-moz-lwtheme) {
-  background-image: -moz-linear-gradient(rgba(255, 255, 255, .7),
-                    rgba(255, 255, 255, .5) 30%),
-                    -moz-linear-gradient(-moz-dialog, -moz-dialog);
+  background-image: -moz-linear-gradient(
+                      rgba(255, 255, 255, .7),
+                      rgba(255, 255, 255, .5) 30%
+                    ),
+                    -moz-linear-gradient(
+                      -moz-dialog,
+                      -moz-dialog
+                    );
   color: -moz-dialogText;
 }
 
@@ -163,6 +194,16 @@
   background-color: transparent;
   background-image: none;
 }
+
+%ifndef MOZ_CALENDAR
+.tabs-bottom {
+  height: 4px !important;
+  margin: 0px !important;
+  background: -moz-dialog !important;
+  border-top: 1px solid threedshadow;
+  border-bottom: 1px solid threedshadow;
+}
+%endif
 
 .tab-icon-image,
 .tab-throbber {
