--- a/mail/themes/ClassicTB2/messenger/messageWindow.css
+++ b/mail/themes/ClassicTB2/messenger/messageWindow.css
@@ -51,7 +51,7 @@
   background-color: -moz-dialog;
 }
 
-%ifdef MOZ_CALENDAR
+%ifdef MOZ_MAIL_LEGACY
 #mail-toolbar-menubar2 {
   -moz-box-ordinal-group: 0;
 }
@@ -60,7 +60,7 @@
 #mail-toolbox {
   -moz-appearance: none;
   background-color: -moz-dialog;
-%ifndef MOZ_CALENDAR
+%ifndef MOZ_MAIL_LEGACY
   border-bottom: 1px solid threedshadow;
 %endif
 }
