--- a/mail/themes/classic/messenger/primaryToolbar.css
+++ b/mail/themes/classic/messenger/primaryToolbar.css
@@ -18,12 +18,14 @@
   border-top-width: 0;
 }
 
+%ifdef MOZ_MAIL_LEGACY
 @media (-moz-os-version: windows-win7) {
   #tabs-toolbar { -moz-appearance: -moz-win-browsertabbar-toolbox; }
 }
 %endif
+%endif
 
-%ifdef MOZ_CALENDAR
+%ifdef MOZ_MAIL_LEGACY
 #tabs-toolbar {
   border-bottom: 1px solid rgba(10, 31, 51, .35);
   padding-bottom: 1px;
@@ -48,7 +50,7 @@
   margin: 0 0 0px;
 }
 
-%ifdef MOZ_CALENDAR
+%ifdef MOZ_MAIL_LEGACY
 .mail-toolbox {
   border-bottom: 1px solid threedshadow;
 }
