--- a/mail/themes/classic/messenger/tabmail.css
+++ b/mail/themes/classic/messenger/tabmail.css
@@ -87,7 +87,7 @@
   border-radius: 0;
   border-width: 0;
   margin-top: 1px;
-%ifndef MOZ_CALENDAR
+%ifndef MOZ_MAIL_LEGACY
   margin-bottom: 4px;
 %endif
 }
@@ -195,7 +195,7 @@
   background-image: none;
 }
 
-%ifndef MOZ_CALENDAR
+%ifndef MOZ_MAIL_LEGACY
 .tabs-bottom {
   height: 4px !important;
   margin: 0px !important;
