--- a/mail/themes/classic/messenger/primaryToolbar.css
+++ b/mail/themes/classic/messenger/primaryToolbar.css
@@ -18,7 +18,7 @@
   border-top-width: 0;
 }
 
-%ifdef MOZ_MAIL_LEGACY
+%ifndef MOZ_MAIL_LEGACY
 @media (-moz-os-version: windows-win7) {
   #tabs-toolbar { -moz-appearance: -moz-win-browsertabbar-toolbox; }
 }
