--- a/mail/themes/classic/messenger/messengercompose/messengercompose.css
+++ b/mail/themes/classic/messenger/messengercompose/messengercompose.css
@@ -489,19 +489,9 @@ toolbarbutton.formatting-button {
 }
 
 .ab-closebutton {
-  list-style-image: url("chrome://global/skin/icons/close.png");
-  -moz-image-region: rect(0px, 56px, 14px, 42px);
   -moz-appearance: none;
   border: none !important;
-  padding: 2px;
-}
-
-.ab-closebutton:hover {
-  -moz-image-region: rect(0px, 28px, 14px, 14px);
-}
-
-.ab-closebutton:hover:active {
-  -moz-image-region: rect(0px, 42px, 14px, 28px);
+  padding: 0 3px;
 }
 
 .ab-closebutton > .toolbarbutton-icon {
