[MAIL] Replace tab background images with those from Firefox 3.6 and make the hover background not move up

--- a/mail/themes/classic/messenger/tabmail.css
+++ b/mail/themes/classic/messenger/tabmail.css
@@ -90,7 +90,7 @@
 }
 
 .tabmail-tab:not([selected="true"]):hover {
-  background: url("chrome://messenger/skin/icons/tab-hover-bkgnd.apng") 0px -2px repeat-x;
+  background: url("chrome://messenger/skin/icons/tab-hover-bkgnd.png") 0px 0px repeat-x;
   padding-top: 2px;
 }
 
