--- a/mail/themes/classic/messenger/tabmail-linux.css
+++ b/mail/themes/classic/messenger/tabmail-linux.css
@@ -82,8 +82,8 @@
   margin: 0;
   padding: 1px 0 3px;
   -moz-border-image: url(icons/tab.png) 4 3 0 / 4px 3px 0 repeat stretch;
-  height: 24px;
-  min-height: 24px;
+  height: 26px;
+  min-height: 26px;
   border-radius: 0;
   border-width: 0;
   margin-top: 1px;
@@ -257,19 +257,8 @@ tabpanels {
 .tab-close-button > .toolbarbutton-icon {
   -moz-margin-end: 0px !important;
   margin-top: 1px;
-  margin: -4px
+  margin: -4px !important;
 }
-
-%ifndef XP_WIN
-.tabmail-tab:not([selected]):not(:hover) .tab-close-button {
-  margin-top: -1px;
-  margin-bottom: -2px;
-}
-
-.tabmail-tab:not([selected]):hover .tab-close-button {
-  margin-bottom: -1px;
-}
-%endif
 
 .tab-close-button,
 .tabs-closebutton {
