--- a/mail/themes/classic/messenger/tabmail-linux.css
+++ b/mail/themes/classic/messenger/tabmail-linux.css
@@ -1,38 +1,6 @@
-
-/* ***** BEGIN LICENSE BLOCK *****
- * Version: MPL 1.1/GPL 2.0/LGPL 2.1
- *
- * The contents of this file are subject to the Mozilla Public License Version
- * 1.1 (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
- * http://www.mozilla.org/MPL/
- *
- * Software distributed under the License is distributed on an "AS IS" basis,
- * WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
- * for the specific language governing rights and limitations under the
- * License.
- *
- * The Original Code is tabmail
- * The Initial Developer of the Original Code is
- *   Scott MacGregor <mscott@mozilla.org>.
- * Portions created by the Initial Developer are Copyright (C) 2007
- * the Initial Developer. All Rights Reserved.
- *
- * Contributor(s):
- *
- * Alternatively, the contents of this file may be used under the terms of
- * either the GNU General Public License Version 2 or later (the "GPL"), or
- * the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
- * in which case the provisions of the GPL or the LGPL are applicable instead
- * of those above. If you wish to allow use of your version of this file only
- * under the terms of either the GPL or the LGPL, and not to allow others to
- * use your version of this file under the terms of the MPL, indicate your
- * decision by deleting the provisions above and replace them with the notice
- * and other provisions required by the GPL or the LGPL. If you do not delete
- * the provisions above, a recipient may use your version of this file under
- * the terms of any one of the MPL, the GPL or the LGPL.
- *
- * ***** END LICENSE BLOCK ***** */
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 /**
  * Tabmail Tabs
@@ -50,31 +18,15 @@
   visibility: collapse;
 }
 
-#tabpanelcontainer:-moz-lwtheme {
-  color: inherit;
-}
-
 /**
  * Tab
  */
 
 .tabmail-tab {
   -moz-appearance: none;
-  background:
-    -moz-linear-gradient(
-      bottom,
-      rgba(10%, 10%, 10%, .4) 1px,
-      transparent 1px
-    ),
-    -moz-linear-gradient(
-      transparent,
-      hsla(0, 0%, 32%, .2) 80%,
-      hsla(0, 0%, 0%, .2)
-    ),
-    -moz-linear-gradient(
-      -moz-dialog,
-      -moz-dialog
-    );
+  background: -moz-linear-gradient(bottom, rgba(10%, 10%, 10%, .4) 1px, transparent 1px),
+              -moz-linear-gradient(transparent, hsla(0, 0%, 32%, .2) 80%, hsla(0, 0%, 0%, .2)),
+              -moz-linear-gradient(-moz-dialog, -moz-dialog);
   background-origin: border-box;
   background-position: 1px 2px;
   background-size: -moz-calc(100% - 2px) -moz-calc(100% - 2px);
@@ -92,63 +44,16 @@
 %endif
 }
 
-.tabmail-tab:not(:-moz-lwtheme):not([selected="true"]):hover {
-  background-image:
-    -moz-linear-gradient(
-      bottom,
-      rgba(10%, 10%, 10%, .4) 1px,
-      transparent 1px
-    ),
-    -moz-linear-gradient(
-      hsla(0, 0%, 100%, .3) 1px,
-      hsla(0, 0%, 75%, .2) 80%,
-      hsla(0, 0%, 60%, .2)
-    ),
-    -moz-linear-gradient(
-      -moz-dialog,
-      -moz-dialog
-    );
+.tabmail-tab:not([selected="true"]):hover {
+  background-image: -moz-linear-gradient(bottom, rgba(10%, 10%, 10%, .4) 1px, transparent 1px),
+                    -moz-linear-gradient(hsla(0, 0%, 100%, .3) 1px, hsla(0, 0%, 75%, .2) 80%, hsla(0, 0%, 60%, .2)),
+                    -moz-linear-gradient(-moz-dialog, -moz-dialog);
 }
 
-.tabmail-tab[selected="true"]:not(:-moz-lwtheme) {
-  background-image: -moz-linear-gradient(
-                      rgba(255, 255, 255, .7),
-                      rgba(255, 255, 255, .5) 30%
-                    ),
-                    -moz-linear-gradient(
-                      -moz-dialog,
-                      -moz-dialog
-                    );
+.tabmail-tab[selected="true"] {
+  background-image: -moz-linear-gradient(rgba(255, 255, 255, .7), rgba(255, 255, 255, .5) 30%),
+                    -moz-linear-gradient(-moz-dialog, -moz-dialog);
   color: -moz-dialogText;
-}
-
-.tabmail-tab:-moz-lwtheme {
-  color: inherit;
-}
-
-.tabmail-tab[selected="true"]:-moz-lwtheme {
-  background-image: -moz-linear-gradient(rgba(255, 255, 255, .7),
-                    rgba(255, 255, 255, .5) 50%);
-}
-
-.tabmail-tab:-moz-lwtheme-brighttext:not([selected="true"]) {
-  background-image: -moz-linear-gradient(hsla(0, 0%, 40%, .6),
-                    hsla(0, 0%, 30%, .6) 80%);
-}
-
-.tabmail-tab:-moz-lwtheme-brighttext:not([selected="true"]):hover {
-  background-image: -moz-linear-gradient(hsla(0, 0%, 60%, .6),
-                    hsla(0, 0%, 45%, .6) 80%);
-}
-
-.tabmail-tab:-moz-lwtheme-darktext:not([selected="true"]) {
-  background-image: -moz-linear-gradient(hsla(0, 0%, 60%, .5),
-                    hsla(0, 0%, 45%, .5) 80%);
-}
-
-.tabmail-tab:-moz-lwtheme-darktext:not([selected="true"]):hover {
-  background-image: -moz-linear-gradient(hsla(0, 0%, 80%, .5),
-                    hsla(0, 0%, 60%, .5) 80%);
 }
 
 .tab-content {
@@ -173,26 +78,6 @@
 
 .tabmail-tab[selected="true"] > .tab-image-middle > .tab-text {
   opacity: 1.0 !important;
-}
-
-.tabmail-arrowscrollbox > .scrollbutton-up:-moz-lwtheme-brighttext,
-.tabmail-arrowscrollbox > .scrollbutton-down:-moz-lwtheme-brighttext,
-.tabs-alltabs-button:-moz-lwtheme-brighttext,
-.tabs-closebutton:-moz-lwtheme-brighttext {
-  background-color: rgba(0,0,0,.5);
-}
-
-.tabmail-arrowscrollbox > .scrollbutton-up:-moz-lwtheme-darktext,
-.tabmail-arrowscrollbox > .scrollbutton-down:-moz-lwtheme-darktext,
-.tabs-alltabs-button:-moz-lwtheme-darktext,
-.tabs-closebutton:-moz-lwtheme-darktext {
-  background-color: rgba(255,255,255,.5);
-}
-
-.tabmail-tabs:-moz-lwtheme {
-  padding-top: 1px;
-  background-color: transparent;
-  background-image: none;
 }
 
 %ifndef MOZ_MAIL_LEGACY
@@ -330,11 +215,6 @@ tabpanels {
   -moz-margin-end: 0px;
 }
 
-.tabmail-arrowscrollbox > .scrollbutton-up:-moz-lwtheme-brighttext,
-.tabmail-arrowscrollbox > stack > .scrollbutton-down:-moz-lwtheme-brighttext {
-  list-style-image: url(chrome://messenger/skin/icons/tab-arrow-left-inverted.png);
-}
-
 .tabmail-arrowscrollbox > .scrollbutton-up[disabled],
 .tabmail-arrowscrollbox > stack > .scrollbutton-down[disabled] {
   opacity: .4;
@@ -373,10 +253,6 @@ tabpanels {
   -moz-image-region: rect(0, 13px, 11px, 0);
 }
 
-.tabs-alltabs-button > .toolbarbutton-menu-dropmarker:-moz-lwtheme-brighttext {
-  list-style-image: url(chrome://messenger/skin/icons/mainwindow-dropdown-arrow-inverted.png);
-}
-
 /**
  * All Tabs Menupopup
  */
@@ -405,19 +281,12 @@ tabpanels {
   display: none;
 }
 
-.contentTabToolbox:not(:-moz-lwtheme) {
+.contentTabToolbox {
   height: 3px;
   border-bottom: 1px solid rgb(105, 105, 105);
-}
-
-.contentTabToolbox:-moz-lwtheme {
-  height: 1px;
-  background-image: -moz-linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5) 50%);
-  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .contentTabToolbar {
   height: 0px;
   min-height: 0px;
 }
-
